package com.directi.training.lsp.exercise_refactored;

public interface IQuackable
{
    void quack();
}
