package com.directi.training.lsp.exercise_refactored;

public interface ISwimmable
{
    void swim();
}